lower right side toggle, to avoid login overlap

--- a/assets/app/components/page/page.scss
+++ b/assets/app/components/page/page.scss
@@ -74,7 +74,7 @@ main {
             }
             #right_side_toggle {
                 position: fixed;
-                top: 200px;
+                top: 250px;
                 right:0;
                 &.right_side_visible {
                     right: 250px;
